# littlehorse-comfyui-worker

./: .dockerignore  .gitignore  Dockerfile  README.md  create_test_workflow.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml  release-on-main.yml
comfyui_worker/: __init__.py  comfyui_client.py  config.py  history_parser.py  main.py  worker.py
config/: development.env
docs/plans/: 2026-01-20-comfyui-task-signature-implementation.md  2026-01-20-comfyui-worker-design.md  2026-01-20-comfyui-worker-implementation.md  2026-01-20-file-reduction-implementation.md  2026-01-20-gha-release-docker-implementation.md  2026-01-20-root-module-refactor-implementation.md  2026-01-20-task-name-config-implementation.md  2026-01-20-typing-sweep-implementation.md  2026-01-21-comfyui-task-worker-integration.md  2026-01-21-create-test-workflow-script.md  2026-01-21-local-littlehorse-compose.md
src/comfyui_worker/: __init__.py  comfyui_client.py  main.py  worker.py
tests/: test_comfyui_client.py  test_config.py  test_dockerfile.py  test_history_parser.py  test_imports.py  test_main.py  test_readme.py  test_task_entrypoint.py  test_worker.py
